# rust-training

esn/: Cargo.toml
esn/src/: main.rs  reservoir.rs
tutorial/chap2/guessing_game/: Cargo.toml
tutorial/chap3/branches/: Cargo.toml
tutorial/chap3/branches/src/: main.rs
tutorial/chap3/data_types/: Cargo.toml
tutorial/chap3/data_types/src/: main.rs
tutorial/chap3/fibonacci_number/: Cargo.toml
tutorial/chap3/fibonacci_number/src/: main.rs
tutorial/chap3/functions/: Cargo.toml
tutorial/chap3/functions/src/: main.rs
tutorial/chap3/variables/: Cargo.toml
tutorial/chap3/variables/src/: main.rs
tutorial/chap5/rectangles/: Cargo.toml
tutorial/chap5/rectangles/src/: main.rs
tutorial/chap5/structs/: Cargo.toml
tutorial/chap5/structs/src/: main.rs
tutorial/chap6/match_operator/: Cargo.toml
tutorial/chap6/match_operator/src/: main.rs
tutorial/conditional_statement/: Cargo.toml
tutorial/conditional_statement/src/: main.rs
tutorial/function_and_procedure/: Cargo.toml
tutorial/function_and_procedure/src/: main.rs
tutorial/pattern_matching/: Cargo.toml
tutorial/pattern_matching/src/: main.rs
tutorial/string/: Cargo.toml
tutorial/string/src/: main.rs
