[package]
name = "esn"
version = "0.1.2"
authors = ["kmhk-naka <phytran35@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
ndarray-linalg = { version = "0.12.1", features = ["openblas"] }
ndarray-rand = "0.11"
openblas-src = "0.9"
gnuplot = "0.0.37"
